jdk24适配